@@ -205,6 +205,7 @@ SSL connections use 'curl' command as a backend.")
       (cond
        ((string= "statuses/friends_timeline" method) "~")
        ((string= "statuses/replies" method) "@")
+       ((string= "statuses/mentions" method) "M")
        ((string= "statuses/public_timeline" method) "-")
        ((string= "statuses/user_timeline" method) (twittering-get-username))
        ((string-match "^statuses/user_timeline/\\(.+\\)$" method)
@@ -216,6 +217,10 @@ SSL connections use 'curl' command as a backend.")
 	(let ((username (match-string-no-properties 1 method))
 	      (listname (match-string-no-properties 2 method)))
 	  (concat username "/" listname)))
+       ((string= "1/statuses/home_timeline" method) "H")
+       ((string= "1/statuses/retweeted_by_me" method) "B")
+       ((string= "1/statuses/retweeted_to_me" method) "T")
+       ((string= "1/statuses/retweets_of_me" method) "O")
        (t nil)))
      (t nil))))
 
@@ -229,11 +234,21 @@ SSL connections use 'curl' command as a backend.")
     '("twitter.com" "statuses/public_timeline"))
    ((string-match "^@$" timeline-spec)
     '("twitter.com" "statuses/replies"))
+   ((string-match "^M$" timeline-spec)
+    '("twitter.com" "statuses/mentions"))
    ((string-match "^\\([^/]+\\)/\\([^/]+\\)$" timeline-spec)
     (let ((username (match-string 1 timeline-spec))
 	  (list-name (match-string 2 timeline-spec)))
       `("api.twitter.com"
 	,(concat "1/" username "/lists/" list-name "/statuses" ))))
+   ((string-match "^H$" timeline-spec)
+    '("api.twitter.com" "1/statuses/home_timeline"))
+   ((string-match "^B$" timeline-spec)
+    '("api.twitter.com" "1/statuses/retweeted_by_me"))
+   ((string-match "^T$" timeline-spec)
+    '("api.twitter.com" "1/statuses/retweeted_to_me"))
+   ((string-match "^O$" timeline-spec)
+    '("api.twitter.com" "1/statuses/retweets_of_me"))
    (t
     `("twitter.com" ,(concat "statuses/user_timeline/" timeline-spec)))))
 
